--- a/index.html
+++ b/index.html
@@ -1360,7 +1360,7 @@
       </div>
     </section>
 
-    <!-- Footer -->
+    <!-- Footer --->
     <footer class="footer footer-center p-10 bg-primary text-primary-content">
       <div>
         <div class="avatar">
